--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obslack",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Slack Message Manager",
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc"
