--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/okitan/obslack#readme",
   "devDependencies": {
+    "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.3"
   },
