--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@slack/web-api": "^5.1.0",
+    "@types/async": "^3.0.3",
     "@types/zen-observable": "^0.8.0",
+    "async": "^3.1.0",
     "spinnies": "^0.5.0",
     "zen-observable": "^0.8.14"
   }
