--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   },
   "homepage": "https://github.com/okitan/obslack#readme",
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.7.2"
+    "prettier": "2.0.5",
+    "ts-node": "8.9.0",
+    "typescript": "3.8.3"
   },
   "dependencies": {
-    "@slack/web-api": "^5.1.0",
-    "@types/async": "^3.0.3",
+    "@slack/web-api": "^5.8.0",
+    "@types/async": "^3.2.0",
     "@types/zen-observable": "^0.8.0",
-    "async": "^3.1.0",
-    "spinnies": "^0.5.0",
-    "zen-observable": "^0.8.14"
+    "async": "^3.2.0",
+    "spinnies": "^0.5.1",
+    "zen-observable": "^0.8.15"
   }
 }
