--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,3 @@
 {
-  "extends": [
-    "config:base",
-    ":automergeMinor",
-    ":unpublishSafe"
-  ]
+  "extends": ["local>okita/renovate-config"]
 }
