--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   "homepage": "https://github.com/okitan/obslack#readme",
   "devDependencies": {
     "prettier": "2.4.1",
-    "ts-node": "9.1.1",
+    "ts-node": "10.3.0",
     "typescript": "4.4.4"
   },
   "dependencies": {
     "@slack/web-api": "^6.0.0",
-    "@types/async": "^3.2.3",
-    "@types/zen-observable": "^0.8.0",
     "async": "^3.2.0",
     "spinnies": "^0.5.1",
     "zen-observable": "^0.8.15"
+  },
+  "optionalDependencies": {
+    "@types/async": "^3.2.3",
+    "@types/zen-observable": "^0.8.0"
   }
 }
