--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/okitan/obslack#readme",
   "devDependencies": {
+    "@types/react": "^17.0.30",
     "prettier": "2.4.1",
     "ts-node": "10.3.0",
     "typescript": "4.4.4"
   },
   "dependencies": {
-    "@slack/web-api": "^6.0.0",
+    "@okian/slackink": "file:../slackink",
+    "@slack/web-api": "^6.1.0",
     "async": "^3.2.0",
-    "spinnies": "^0.5.1",
+    "ink": "^3.2.0",
+    "react": "^16.0.0",
     "zen-observable": "^0.8.15"
   },
   "optionalDependencies": {
