--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@slack/web-api": "^6.1.0",
     "async": "^3.2.0",
     "ink": "^3.2.0",
+    "ink-spinner": "^4.0.3",
     "react": "^16.0.0",
     "zen-observable": "^0.8.15"
   },
