--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,12 +3,12 @@ name: Node CI
 on: [push]
 
 jobs:
-  build:
+  build-with-npm6:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: ["12", "14"]
 
     steps:
       - uses: actions/checkout@v2
@@ -16,9 +16,32 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
       - name: npm install, build, and test
         run: |
           npm ci
-          npm run build --if-present
+          npm install ink react
+          npm run build
+        env:
+          CI: true
+
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: ["16"]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - name: npm install, build, and test
+        run: |
+          npm ci
+          npm run build
         env:
           CI: true
