--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obslack",
-  "version": "0.4.2",
+  "name": "@okitan/obslack",
+  "version": "1.0.0",
   "description": "Slack Message Manager",
   "main": "lib/index.js",
   "scripts": {
