--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@okitan/obslack",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "description": "Slack Message Manager",
+  "exports": "./lib/index.js",
   "main": "lib/index.js",
   "engines": {
     "node": "^14.13 || >=16.0.0"
