:hospital: fix builds

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,10 +10,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "npm"
-      - name: npm install, build, and test
-        run: |
-          npm ci
-          npm run build
+          cache: npm
+      - run: npm ci
+      - run: npm run build:check
         env:
           CI: true
